--- a/static/index.html
+++ b/static/index.html
@@ -68,7 +68,7 @@
 
 <script>
 /* ===== CONFIG ===== */
-const API_BASE = "https://monkfish-app-c8mpr.ondigitalocean.app/"; // <- fill after you deploy the API (e.g., https://your-api.ondigitalocean.app)
+const API_BASE = "https://monkfish-app-c8mpr.ondigitalocean.app"; // <- fill after you deploy the API (e.g., https://your-api.ondigitalocean.app)
 const SENTS = [
   // put your sentences here or load from a static file; example:
   "I like to eat strawberries.",
