--- a/static/index.html
+++ b/static/index.html
@@ -78,8 +78,8 @@ const SENTS = [
 "Here's your receipt.",
 "This is a good place for shopping.",
 "I like to collect old stamps.",
-"One Hong Kong dollar is about 13 cents (USD).",
-"I forgot to charge my Octopus Card.",
+"One Hong Kong dollar is about 13 cents (in USD).",
+"I forgot to charge my phone.",
 "Roy wants a chocolate pie and a strawberry donut.",
 "The cream is too sweet.",
 "I put the jelly into the freezer.",
@@ -107,7 +107,7 @@ const SENTS = [
 "Jane can drive a van.",
 "I want a 12 volt battery and a 100 watt light bulb.",
 "(Pointing to a chemical) This is ether.",
-"This is a microphone, also called a mike.",
+"This is a microphone, also called a mic.",
 "The doctor says I don't have enough vitamin D.",
 "I bought this spanner to fix the sink.",
 "(I bought two lightbulbs.) One of them is a spare.",
