--- a/static/index.html
+++ b/static/index.html
@@ -96,7 +96,7 @@ const SENTS = [
 "I want to attend the AIA carnival.",
 "This movie has a great cast.",
 "I will present this at a conference.",
-"Please click this button.",
+"Please click this link (to go to the homepage).",
 "(Regarding a book) I downloaded a soft copy.",
 "I want buy a new notebook computer.",
 "I need to print a form.",
