--- a/static/index.html
+++ b/static/index.html
@@ -109,7 +109,7 @@ const SENTS = [
 "(Pointing to a chemical) This is ether.",
 "This is a microphone, also called a mic.",
 "The doctor says I don't have enough vitamin D.",
-"I bought this spanner to fix the sink.",
+"I bought this spanner to fix the sink (in the kitchen).",
 "(I bought two lightbulbs.) One of them is a spare.",
 "Charlie dances with a stick.",
 "He is a cheap man.",
