--- a/static/index.html
+++ b/static/index.html
@@ -82,7 +82,8 @@ const SENTS = [
 "I forgot to charge my phone.",
 "Roy wants a chocolate pie and a strawberry donut.",
 "The cream is too sweet.",
-"I put the jelly into the freezer.",
+"I put the jelly into the fridge.",
+"(In the restaurant kitchen) There is a lot of meat in the freezer.'
 "I don’t like rum.",
 "I want a sandwich, a toast and a waffle.",
 "I like vanilla ice cream.",
@@ -91,7 +92,6 @@ const SENTS = [
 "I have a king size bed.",
 "This T-shirt is made of nylon.",
 "This pump is made of PVC.",
-"(After finishing a painting) You can use varnish to protect the color.",
 "I hate the smell of thinner.",
 "I want to attend the AIA carnival.",
 "This movie has a great cast.",
@@ -106,7 +106,6 @@ const SENTS = [
 "The lift is over there.",
 "Jane can drive a van.",
 "I want a 12 volt battery and a 100 watt light bulb.",
-"(Pointing to a chemical) This is ether.",
 "This is a microphone, also called a mic.",
 "The doctor says I don't have enough vitamin D.",
 "I bought this spanner to fix the sink (in the kitchen).",
