--- a/static/index.html
+++ b/static/index.html
@@ -83,7 +83,7 @@ const SENTS = [
 "Roy wants a chocolate pie and a strawberry donut.",
 "The cream is too sweet.",
 "I put the jelly into the fridge.",
-"(In the restaurant kitchen) There is a lot of meat in the freezer.',
+"(In the restaurant kitchen) There is a lot of meat in the freezer.",
 "I don’t like rum.",
 "I want a sandwich, a toast and a waffle.",
 "I like vanilla ice cream.",
