--- a/static/index.html
+++ b/static/index.html
@@ -81,7 +81,7 @@ const SENTS = [
 "One Hong Kong dollar is about 13 cents (in USD).",
 "I forgot to charge my phone.",
 "Roy wants a chocolate pie and a strawberry donut.",
-"The cream is too sweet.",
+"The cream cake is too sweet.",
 "I put the jelly into the fridge.",
 "(In the restaurant kitchen) There is a lot of meat in the freezer.",
 "I don’t like rum.",
@@ -98,7 +98,7 @@ const SENTS = [
 "I will present this at a conference.",
 "Please click this link (to go to the homepage).",
 "(Regarding a book) I downloaded a soft copy.",
-"I want buy a new notebook computer.",
+"I want to buy a new notebook computer.",
 "I need to print a form.",
 "The printer is hanging.",
 "I take the bus to work.",
