--- a/static/index.html
+++ b/static/index.html
@@ -71,25 +71,27 @@
 const API_BASE = "https://monkfish-app-c8mpr.ondigitalocean.app"; // <- fill after you deploy the API (e.g., https://your-api.ondigitalocean.app)
 const SENTS = [
   // put your sentences here or load from a static file; example:
-  "She placed a bid on an internet auction.",
+"She placed a bid on an internet auction.",
 "(Regarding hotel reservation) I did not confirm my booking.",
 "We don't accept VISA cards or cheques.",
-"I want to claim insurance.",
+"(At a restaurant) You don't need to give tips here.",
 "Here's your receipt.",
+"I want to claim insurance.",
 "This is a good place for shopping.",
 "I like to collect old stamps.",
 "One Hong Kong dollar is about 13 cents (in USD).",
 "I forgot to charge my phone.",
 "Roy wants a chocolate pie and a strawberry donut.",
+"The cream is too sweet.",
 "The cream cake is too sweet.",
 "I put the jelly into the fridge.",
 "(In the restaurant kitchen) There is a lot of meat in the freezer.",
 "I don’t like rum.",
 "I want a sandwich, a toast and a waffle.",
 "I like vanilla ice cream.",
-"(At a restaurant) You don't need to give tips here.",
 "This is a quart of milk.",
 "I have a king size bed.",
+"I want one S-size shirt and two L-size shirts.",
 "This T-shirt is made of nylon.",
 "This pump is made of PVC.",
 "I hate the smell of thinner.",
