--- a/static/index.html
+++ b/static/index.html
@@ -83,7 +83,7 @@ const SENTS = [
 "I forgot to charge my phone.",
 "Roy wants a chocolate pie and a strawberry donut.",
 "The cream is too sweet.",
-"The cream cake is too sweet.",
+"The cream soda is too sweet.",
 "I put the jelly into the fridge.",
 "(In the restaurant kitchen) There is a lot of meat in the freezer.",
 "I don’t like rum.",
@@ -91,7 +91,7 @@ const SENTS = [
 "I like vanilla ice cream.",
 "This is a quart of milk.",
 "I have a king size bed.",
-"I want one S-size shirt and two L-size shirts.",
+"The size is wrong.",
 "This T-shirt is made of nylon.",
 "This pump is made of PVC.",
 "I hate the smell of thinner.",
@@ -108,7 +108,7 @@ const SENTS = [
 "The lift is over there.",
 "Jane can drive a van.",
 "I want a 12 volt battery and a 100 watt light bulb.",
-"This is a microphone, also called a mic.",
+"This is a microphone (full name), also called a mic (short form).",
 "The doctor says I don't have enough vitamin D.",
 "I bought this spanner to fix the sink (in the kitchen).",
 "(I bought two lightbulbs.) One of them is a spare.",
