--- a/static/index.html
+++ b/static/index.html
@@ -106,7 +106,7 @@ const SENTS = [
 "I take the bus to work.",
 "You need to turn on the engine first.",
 "The lift is over there.",
-"Jane can drive a van.",
+"Jessica can drive a van.",
 "I want a 12 volt battery and a 100 watt light bulb.",
 "This is a microphone (full name), also called a mic (short form).",
 "The doctor says I don't have enough vitamin D.",
